--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -17,6 +17,11 @@ torch==2.2.0
 torchvision==0.17.0
 pillow==10.2.0
 
+# Testing
+pytest==7.4.3
+pytest-asyncio==0.21.1
+httpx==0.26.0
+
 # Optional: For future privacy features
 # opencv-python==4.9.0.80
 
