Fix test suite: Add NumPy version constraint and Windows DB cleanup
- Pin numpy<2.0 in requirements.txt (PyTorch 2.2.0 compatibility)
- Fix Windows file lock issue in test DB teardown with engine.dispose()
- Add error logging to tests for better debugging
- All 8 tests now passing successfully (2 health, 6 integration)

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -16,6 +16,7 @@ pydantic-settings==2.1.0
 torch==2.2.0
 torchvision==0.17.0
 pillow==10.2.0
+numpy<2.0  # PyTorch 2.2.0 requires NumPy 1.x
 
 # Testing
 pytest==7.4.3
