feat: Add Railway deployment configuration
- Add Procfile with uvicorn command for Railway
- Add railway.json with build and deploy configuration
- Update requirements.txt with CPU-only PyTorch for Railway containers
- Update config.py to support environment variables (MEDIA_ROOT, DATABASE_URL, ALLOWED_ORIGINS)
- Add .env.example template for environment variables
- Add comprehensive deployment documentation (RAILWAY_DEPLOYMENT.md)
- Add deployment checklist (DEPLOYMENT_CHECKLIST.md)
- Add PowerShell configuration script for post-deployment setup

Changes enable production deployment to Railway with:
- Environment variable configuration
- CPU-optimized PyTorch installation
- CORS configuration for frontend integration
- Persistent media storage support
- Ready for Create Apps Championship pitch demo

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -13,8 +13,9 @@ pydantic==2.5.3
 pydantic-settings==2.1.0
 
 # AI / ML
-torch==2.2.0
-torchvision==0.17.0
+--extra-index-url https://download.pytorch.org/whl/cpu
+torch==2.2.0+cpu
+torchvision==0.17.0+cpu
 pillow==10.2.0
 numpy<2.0  # PyTorch 2.2.0 requires NumPy 1.x
 
